<?xml version="1.0" encoding="utf-8"?>
<!--
    Tanggal Pengerjaan : 12 Juni 2024
    NIM : 10118368
    Nama : Aryalingga Karamasatya Radhiendra
    Kelas : AKB UL1
-->
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/ungu"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/profil"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/title"
        android:padding="16dp"
        android:text="@string/ic_profile"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/profile"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_gravity="center"
        android:layout_marginBottom="16dp"
        android:paddingTop="2dp"
        android:src="@drawable/img_foto"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/profil" />

    <TextView
        android:id="@+id/profileName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:padding="7dp"
        android:textColor="@color/white"
        android:background="@drawable/style_a"
        android:text="@string/nama"
        android:textAlignment="center"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/profile" />

    <TextView
        android:id="@+id/contact"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:padding="10dp"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:background="@drawable/style_a"
        android:text="@string/contact"
        android:textAlignment="center"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/profileName" />

    <ImageView
        android:id="@+id/phoneIcon"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginTop="10dp"
        android:clickable="true"
        android:padding="3dp"
        android:src="@drawable/ic_phone"
        android:textAlignment="center"
        app:layout_constraintEnd_toStartOf="@+id/instagramIcon"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/emailIcon"
        app:layout_constraintTop_toBottomOf="@+id/contact" />

    <ImageView
        android:id="@+id/emailIcon"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginTop="10dp"
        android:clickable="true"
        android:onClick="openEmailApp"
        android:padding="3dp"
        android:src="@drawable/ic_email"
        android:textAlignment="center"
        app:layout_constraintEnd_toStartOf="@+id/phoneIcon"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/contact" />

    <ImageView
        android:id="@+id/mapIcon"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginTop="10dp"
        android:clickable="true"
        android:onClick="openMapApp"
        android:padding="3dp"
        android:src="@drawable/ic_map"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/instagramIcon"
        app:layout_constraintTop_toBottomOf="@+id/contact" />

    <ImageView
        android:id="@+id/instagramIcon"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginTop="10dp"
        android:clickable="true"
        android:padding="3dp"
        android:src="@drawable/ic_instagram"
        android:textAlignment="center"
        app:layout_constraintEnd_toStartOf="@+id/mapIcon"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/phoneIcon"
        app:layout_constraintTop_toBottomOf="@+id/contact" />

    <TextView
        android:id="@+id/version"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/versi"
        android:padding="3dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>
